# parallel-sorting-benchmark

./: CMakeLists.txt  README.md  REPORT.md  plot_results.py  run_experiments.sh
results/: cuda.csv  omp.csv  results.csv  serial.csv  system_info.txt
src/: main.cpp
src/cli/: cli.cpp  cli.hpp
src/data/: generator.cpp  generator.hpp
src/sort/: cuda_sort.cu  cuda_sort.hpp  omp_sort.cpp  omp_sort.hpp  serial_sort.cpp  serial_sort.hpp
